--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation project(path: ':android-networking')
-
     //implementation project(':rx3-android-networking')
-   //implementation 'com.github.janakkhimsuriya:Rx3AndroidNetworking:0.0.1'
+    implementation project(':android-networking')
 }
