--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //implementation project(':rx3-android-networking')
-    implementation project(':android-networking')
+    implementation project(':rx3-remote-networking')
 }
