--- a/rx3-remote-networking/build.gradle
+++ b/rx3-remote-networking/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.8.2"
     api "com.squareup.okhttp3:okhttp:4.4.0"
     api "io.reactivex.rxjava3:rxandroid:3.0.0"
     api "io.reactivex.rxjava3:rxjava:3.0.2"
